styles + Get quote

--- a/getQuote.html
+++ b/getQuote.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container text-center mt-5">
         <h1>WisdomWhispers</h1>
-        <button id="quoteButton" class="btn btn-primary mt-3">Show Wisdom</button>
+        <button id="quoteButton" class="btn btn-primary mt-3 bg-green-950 hover:bg-green-700">Show Wisdom</button>
         <p id="quote" class="mt-3"></p>
     </div>
 
